<?xml version="1.0"?>
<package format="3">
	<name>global_alignment_node</name>
	<version>0.0.1</version>
	<description>Convert VIO odometry into the AprilTag base global frame.</description>

	<maintainer email="lee@example.com">lee</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>rclcpp</depend>
	<depend>tf2</depend>
	<depend>tf2_msgs</depend>
	<depend>tf2_ros</depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
