<?xml version="1.0"?>
<package format="3">
	<name>topic_visualization</name>
	<version>0.0.1</version>
	<description>CyberDog2 可视化话题转发节点，用于将远端话题转成 RViz 友好的本地话题。</description>

	<maintainer email="lee@example.com">lee</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>geometry_msgs</depend>
	<depend>lifecycle_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>rclcpp</depend>
	<depend>sensor_msgs</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>visualization_msgs</depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>rviz2</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>